replace secret key and add parameter handler
