# server/docs/swagger.json
@@ -71,6 +71,29 @@
                 }
             }
         },
+        "/parameter": {
+            "get": {
+                "description": "Возвращает массив параметров, предназначеных для использования в шаблонах.",
+                "produces": [
+                    "aplication/json"
+                ],
+                "tags": [
+                    "parameter"
+                ],
+                "summary": "Возвращает все параметры для использования в шаблонах.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/response.Parameter"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/sample": {
             "get": {
                 "description": "return sample data as json.",
@@ -134,6 +157,37 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.Parameter": {
+            "type": "object",
+            "required": [
+                "defaultValue",
+                "id",
+                "isDefault",
+                "isSystem",
+                "name",
+                "parameterType"
+            ],
+            "properties": {
+                "defaultValue": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isDefault": {
+                    "type": "boolean"
+                },
+                "isSystem": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parameterType": {
                     "type": "string"
                 }
             }
